--- a/style.css
+++ b/style.css
@@ -79,6 +79,26 @@ h3{ font-size: 30px;
     margin-right: 7.5%;
 
 }
+.shadow{
+    box-shadow: 1px 1px 25px gray;
+}
+.like{
+    margin-top: 5%;
+}
+.main{
+    padding: 10%;
+    margin: auto;
+}
+.flex{
+    display: flex;
+    padding: 0 5%;
+}
+.text{
+    text-align: center;
+}
+.space{
+    margin: 0 auto;
+}
 .footer-text{
     text-align: center;
     margin-top:  50px;
